--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   
     <head>
+      <link type="text/css" rel="main" href="main.css"/>
       <title>Morgan McQuain's Website</title>
     </head>
     <body>
@@ -9,5 +10,9 @@
         <li> I'm morgan </li>
         <li> I'm 21 years old </li>
       </p>
+        <img src="http://media.mercola.com/assets/images/food-facts/banana-fb.jpg"/>
+		  <p>
+		    <li> this is a yummy <span>yellow</span> banana </li>
+		  </p>
     </body>
 </html>
