--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   
     <head>
-      <link type="text/css" rel="main" href="main.css"/>
+      <link type="text/css" rel="stylesheet" href="/css/main.css"/>
       <title>Morgan McQuain's Website</title>
     </head>
     <body>
